--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -80,9 +80,10 @@ i2c:
 # Internal Blue LED
 light:
   - platform: status_led
-    name: "Internal LED"
+#    name: "Internal LED"
     pin: GPIO2
-    entity_category: "Config"
+    id: internal_led
+#    entity_category: "Config"
 
 # 18B20 sensor Pin
 dallas:
