--- a/EZO Calibration Configs/calibration_ph.yaml
+++ b/EZO Calibration Configs/calibration_ph.yaml
@@ -1,6 +1,78 @@
+substitutions:
+  # names
+  name: "aquapi"
+  friendly_name: "AquaPi"
+
+  # App Version - Updated: 8/2023
+  appVersion: "0.1c"
+
+  # pins
+  sdaPin: "21"
+  sclPin: "22"
+  
+  # EZO Circuit Addresses
+  # pH circuit, who's address is 99
+  addPH: "99"
+
+esphome:
+  name: "${name}"
+  friendly_name: "${friendly_name}"
+  # Automatically add the mac address to the name
+  name_add_mac_suffix: true
+  project:
+    name: TheRealFalseReality.aquapi
+    version: "${appVersion}"
+
+esp32:
+  board: esp32dev
+  framework:
+    type: arduino
+
 # Enable logging
 logger:
   level: verbose
+
+# Enable Home Assistant API
+api:
+
+ota:
+
+# dashboard_import:
+#   package_import_url: github://TheRealFalseReality/aquapi/aquapi_config.yaml@main
+#   import_full_config: true
+
+wifi:
+  ap:
+
+captive_portal:
+
+web_server:
+
+# Sets up Bluetooth LE (Only on ESP32) to allow the user
+# to provision wifi credentials to the device.
+esp32_improv:
+  authorizer: none
+  
+improv_serial:
+
+# i2c Pins
+i2c:
+  sda: ${sdaPin}
+  scl: ${sclPin}
+  scan: true
+  id: bus_a
+
+# Internal Blue LED
+light:
+  - platform: status_led
+    # name: "Internal LED"
+    pin: GPIO2
+    id: internal_led
+    # entity_category: "Config"
+
+# 18B20 sensor Pin
+dallas:
+  - pin: ${dallasPin}
 
 sensor:
   # EZO Circuits (yellow - SCL/RX, blue - SDA/TX)
@@ -12,7 +84,7 @@ sensor:
     address: 99
     unit_of_measurement: ""
     accuracy_decimals: 2
-    update_interval: 2s
+    update_interval: 1s
     state_class: "measurement"
 
 button:
