--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,7 +4,7 @@ substitutions:
   friendly_name: "AquaPi"
 
   # App Version - Updated: 8/2023
-  appVersion: "0.18.6.2"
+  appVersion: "0.18.6.2-TEST"
 
   # pins
   dallasPin: "4"
