--- a/EZO Calibration Configs/calibration_ec.yaml
+++ b/EZO Calibration Configs/calibration_ec.yaml
@@ -81,10 +81,24 @@ sensor:
     state_class: "measurement"
 
 button:
+  # Output All
+  - platform: template
+    name: "EC - Output - All"
+    id: ec_all
+    entity_category: "Config"
+    on_press:
+      then:
+        - lambda: |-
+            id(ec_ezo).send_custom("O,EC,1");
+            id(ec_ezo).send_custom("O,TDS,1");
+            id(ec_ezo).send_custom("O,S,1");
+            id(ec_ezo).send_custom("O,SG,1");
+
   # Output Conductivity
   - platform: template
     name: "EC - Output - Conductivity"
     id: ec_cond
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -92,11 +106,38 @@ button:
             id(ec_ezo).send_custom("O,TDS,0");
             id(ec_ezo).send_custom("O,S,0");
             id(ec_ezo).send_custom("O,SG,0");
+
+  # Output Salinity
+  - platform: template
+    name: "EC - Output - Salinity"
+    id: ec_sal
+    entity_category: "Config"
+    on_press:
+      then:
+        - lambda: |-
+            id(ec_ezo).send_custom("O,EC,0");
+            id(ec_ezo).send_custom("O,TDS,0");
+            id(ec_ezo).send_custom("O,S,1");
+            id(ec_ezo).send_custom("O,SG,0");
+
+  # Output Specfic Gravity
+  - platform: template
+    name: "EC - Output - Specfic Gravity"
+    id: ec_sg
+    entity_category: "Config"
+    on_press:
+      then:
+        - lambda: |-
+            id(ec_ezo).send_custom("O,EC,0");
+            id(ec_ezo).send_custom("O,TDS,0");
+            id(ec_ezo).send_custom("O,S,0");
+            id(ec_ezo).send_custom("O,SG,1");
             
   # Output TDS
   - platform: template
     name: "EC - Output - TDS"
     id: ec_tds
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -109,6 +150,7 @@ button:
   - platform: template
     name: "EC - Get Information"
     id: ec_info
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -118,6 +160,7 @@ button:
   - platform: template
     name: "EC - Set Probe Type K1"
     id: ec_probe_type
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -127,6 +170,7 @@ button:
   - platform: template
     name: "EC - Get Probe Value"
     id: ec_probe_value
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -136,6 +180,7 @@ button:
   - platform: template
     name: "EC - Manual Read"
     id: ec_read
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -145,6 +190,7 @@ button:
   - platform: template
     name: "EC - Calibration - 0"
     id: ec_cal_0
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -154,6 +200,7 @@ button:
   - platform: template
     name: "EC - Calibration - low 12880"
     id: ec_cal_low
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -163,6 +210,7 @@ button:
   - platform: template
     name: "EC - Calibration - high 80000"
     id: ec_cal_high
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -172,6 +220,7 @@ button:
   - platform: template
     name: "EC - Calibration Clear"
     id: ec_cal_clear
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -181,6 +230,7 @@ button:
   - platform: template
     name: "EC - Calibration - check"
     id: ec_cal_check
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -190,6 +240,7 @@ button:
   - platform: template
     name: "EC - Staus Check"
     id: ec_status
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -199,6 +250,7 @@ button:
   - platform: template
     name: "EC - TDS Value"
     id: ec_tds_value
+    entity_category: "Config"
     on_press:
       then:
         - lambda: |-
@@ -208,6 +260,7 @@ button:
   # Get Enabled Parameter(s)
   - platform: template
     name: "EC - Get Enabled Parameter(s)"
+    entity_category: "Config"
     id: ec_param
     on_press:
       then:
