--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,7 +4,7 @@ substitutions:
   friendly_name: "AquaPi-TEST"
 
   # App Version - Updated: 8/2023
-  appVersion: "0.18.6.2-TEST"
+  appVersion: "0.19-TEST"
 
   # pins
   dallasPin: "4"
@@ -28,6 +28,14 @@ substitutions:
   addHUM: "111"
   # CO2 circuit, who's address is 105
   addCO2: "105"
+
+  # calibration variables
+  # calibration at 0C - Ice Water
+  cal_0: "0.0"
+  cal_0_2: "0.0"
+  # calibration at 100C - Boiling Water
+  cal_100: "100.0"
+  cal_100_2: "100.0"
 
 esphome:
   name: "${name}"
@@ -61,8 +69,7 @@ captive_portal:
 
 web_server:
 
-# Sets up Bluetooth LE (Only on ESP32) to allow the user
-# to provision wifi credentials to the device.
+# Sets up Bluetooth LE (Only on ESP32) to allow the user to provision wifi credentials to the device.
 esp32_improv:
   authorizer: none
   
@@ -78,10 +85,8 @@ i2c:
 # Internal Blue LED
 light:
   - platform: status_led
-    # name: "Internal LED"
     pin: GPIO2
     id: internal_led
-    # entity_category: "Config"
 
 # 18B20 sensor Pin
 dallas:
@@ -231,25 +236,40 @@ sensor:
     state_class: "measurement"
     disabled_by_default: true
 
-  # Temperature Probes
+  # Temperature Probes 1
   - platform: dallas
     id: temp_1
     icon: mdi:thermometer-lines
     index: 0
     name: "Temperature"
+    filters:
+      - calibrate_linear:
+          method: least_squares
+          datapoints:
+            - 0.0 -> ${cal_0}
+            - 100.0 -> ${cal_100}
 
+  # Temperature Probes 2
   - platform: dallas
     id: temp_2
     icon: mdi:thermometer-lines
     index: 1
     name: "Temperature 2"
+    filters:
+      - calibrate_linear:
+          method: least_squares
+          datapoints:
+            - 0.0 -> ${cal_0_2}
+            - 100.0 -> ${cal_100_2}
     disabled_by_default: true
     
+  # Convert to Fahrenheit - Temp. 1
   - platform: template
     id: temp_f
     lambda: |-
       return id(temp_1).state * 9 / 5 + 32;
 
+  # Convert to Fahrenheit - Temp. 2
   - platform: template
     id: temp_f_2
     lambda: |-
@@ -317,6 +337,15 @@ text_sensor:
       return {"${appVersion}"};
     entity_category: "diagnostic"
 
+  # GitHub Project URL
+  - platform: template
+    name: GitHub
+    id: github
+    icon: mdi:github
+    lambda: |-
+      return {"github.com/TheRealFalseReality/aquapi"};
+    entity_category: "diagnostic"
+
   # Water Level
   - platform: template
     icon: mdi:waves-arrow-up
@@ -339,7 +368,7 @@ text_sensor:
         return {"Uknown or Error"};
       }
 
-  # Temperature Range
+  # Temperature Range 1
   - platform: template
     name: Temperature Range
     id: temp_range
@@ -358,6 +387,7 @@ text_sensor:
         return {"Unknown"};
       }  
 
+  # Temperature Range 2
   - platform: template
     name: Temperature 2 Range
     id: temp_range_2
@@ -376,15 +406,6 @@ text_sensor:
       else {
         return {"Unknown"};
       }  
-
-  # GitHub Project URL
-  - platform: template
-    name: GitHub
-    id: github
-    icon: mdi:github
-    lambda: |-
-      return {"github.com/TheRealFalseReality/aquapi"};
-    entity_category: "diagnostic"
 
 button:
   # Soft Restart
@@ -405,7 +426,7 @@ button:
             id(ec_ezo).send_custom("O,S,1");
             id(ec_ezo).send_custom("O,SG,0");
     entity_category: "Config"
-    disabled_by_default: false
+    disabled_by_default: true
             
   # Output Specific Gravity
   - platform: template
@@ -419,7 +440,7 @@ button:
             id(ec_ezo).send_custom("O,S,0");
             id(ec_ezo).send_custom("O,SG,1");
     entity_category: "Config"
-    disabled_by_default: false
+    disabled_by_default: true
 
   # Output Conductivity
   - platform: template
@@ -433,31 +454,59 @@ button:
             id(ec_ezo).send_custom("O,S,0");
             id(ec_ezo).send_custom("O,SG,0");
     entity_category: "Config"
-    disabled_by_default: false
+    disabled_by_default: true
 
 number:
+  # Temperature when Cool
   - platform: template
     name: "Temp. Cool"
     id: range_cool
     icon: mdi:water-thermometer
     optimistic: true
     mode: box
-    min_value: 0
-    max_value: 100
+    min_value: 0.0
+    max_value: 100.0
     step: 1
     restore_value: True
     initial_value: 72
     entity_category: "Config"
 
+  # Temperature when Warm
   - platform: template
     name: "Temp. Warm"
     icon: mdi:water-alert
     id: range_warm
     optimistic: true
     mode: box
-    min_value: 0
-    max_value: 100
+    min_value: 0.0
+    max_value: 100.0
     step: 1
     restore_value: True
     initial_value: 82
     entity_category: "Config"
+
+  # # Calibration Temp. at 0C - Ice Bath
+  # - platform: template
+  #   name: "Calibration Temp. at 0C - Ice Bath"
+  #   id: cal_0
+  #   icon: mdi:snowflake-alert
+  #   optimistic: true
+  #   min_value: -10.0
+  #   max_value: 10.0
+  #   step: .1
+  #   restore_value: True
+  #   initial_value: 0.0
+  #   entity_category: "Config"
+
+  # # Calibration Temp. at 100C - Boiling
+  # - platform: template
+  #   name: "Calibration Temp. at 100C - Boiling"
+  #   id: cal_100
+  #   icon: mdi:snowflake-alert
+  #   optimistic: true
+  #   min_value: 90.0
+  #   max_value: 110.0
+  #   step: .1
+  #   restore_value: True
+  #   initial_value: 100.0
+  #   entity_category: "Config"
