--- a/aquapi_config.yaml
+++ b/aquapi_config.yaml
@@ -4,7 +4,7 @@ substitutions:
   friendly_name: "AquaPi-TEST"
 
   # App Version - Updated: 8/2023
-  appVersion: "0.19-TEST"
+  appVersion: "0.19.1-TEST"
 
   # pins
   dallasPin: "4"
@@ -386,6 +386,42 @@ text_sensor:
       else {
         return {"Unknown"};
       }  
+
+  # Calibration Temp. at 0C
+  - platform: template
+    name: Calibration Temp. at 0C
+    id: cal_0_sen
+    icon: mdi:snowflake-alert
+    disabled_by_default: false
+    lambda: |-
+      return {"${cal_0}"};
+
+  # Calibration Temp. at 100C
+  - platform: template
+    name: Calibration Temp. at 100C
+    id: cal_100_sen
+    icon: mdi:water-thermometer
+    disabled_by_default: false
+    lambda: |-
+      return {"${cal_100}"};
+
+  # Calibration Temp. 2 at 0C
+  - platform: template
+    name: Calibration Temp. 2 at 0C
+    id: cal_0_2_sen
+    icon: mdi:snowflake-alert
+    disabled_by_default: false
+    lambda: |-
+      return {"${cal_0_2}"};
+
+  # Calibration Temp. 2 at 100C
+  - platform: template
+    name: Calibration Temp. 2 at 100C
+    id: cal_100_2_sen
+    icon: mdi:water-thermometer
+    disabled_by_default: false
+    lambda: |-
+      return {"${cal_100_2}"};
 
   # Temperature Range 2
   - platform: template
